Новое поле launch_plan_ssz
