# storage/api-docs/api-docs.json
@@ -76,6 +76,11 @@
                                         "type": "integer",
                                         "example": "1"
                                     },
+                                    "launch_plan_ssz": {
+                                        "description": "1",
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
                                     "report_day": {
                                         "description": "2022-04-01",
                                         "type": "date",
@@ -134,6 +139,11 @@
                                             "example": "1"
                                         },
                                         "plan_of_transfer_to_otk": {
+                                            "description": "1",
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
+                                        "launch_plan_ssz": {
                                             "description": "1",
                                             "type": "integer",
                                             "example": "1"
@@ -382,6 +392,11 @@
                                         "type": "integer",
                                         "example": "1"
                                     },
+                                    "launch_plan_ssz": {
+                                        "description": "1",
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
                                     "report_day": {
                                         "description": "2022-04-01",
                                         "type": "date",
@@ -440,6 +455,11 @@
                                             "example": "1"
                                         },
                                         "plan_of_transfer_to_otk": {
+                                            "description": "1",
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
+                                        "launch_plan_ssz": {
                                             "description": "1",
                                             "type": "integer",
                                             "example": "1"
